# image-wormhole

./: .gitignore  README.md  pyproject.toml
.mem/: 2026-07-05.md  2026-07-19.md  long.md  roadmap.md
src/image_wormhole/: __init__.py  cli.py  extract.py  image_io.py  paths.py  preprocess.py
src/image_wormhole/ops/: __init__.py  adaptive.py  extract.py  threshold.py
