[project]
name = "image-wormhole"
version = "0.1.0"
description = "CLI to batch-process photos into graphic-art variants for compositing in Affinity."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "opencv-python>=4.10",
    "pillow>=10.4",
]

[project.scripts]
wormhole = "image_wormhole.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_wormhole"]
